Give background work virtual threads, and write down where it does not
Everything that is not the window goes through one service to get off
the UI thread, and it was handing out platform threads from a cached
pool - each holding a megabyte of stack, each kept for a minute after
it finished. A two-hour session had made two hundred of them, in the
run that ended by filling the heap. They are virtual threads now: a
task costs a few hundred bytes, nothing has to pool them, and they are
still named so a thread dump still says what was running.

Not everywhere, though, and that is the part worth writing down. A
thread that blocks in native code for the life of the session - a
process's output, an LSP listener, WatchService.take() - would pin a
carrier thread and never give it back. A single ordered worker, like
the highlighter, wants the opposite of concurrency. A watchdog should
not be queued behind whatever it is watching. Those keep real threads,
each saying why at the point it is made, with the whole rule in
arc42 8.2 and ADR-004.

ADR-005 records the other half: smIDE calls no native code of its own,
and if that ever changes it will be java.lang.foreign rather than JNI -
no C toolchain, no library to ship per platform, and memory access that
is checked rather than hoped for. NativeAccessTest fails the build if
System.loadLibrary or a native method appears in the source.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>